# rust_synthesis_profiling

./: .gitignore  Cargo.toml  README.md
src/: dasp_synth.rs  main.rs  oscen_synth.rs  owned_wavetable_synth.rs  shared_wavetable_synth.rs
