[package]
name = "synthesis_profiling"
version = "0.1.0"
authors = ["Erik Natanael Gustafsson <erik@eriknatanael.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jack = { git = "https://github.com/RustAudio/rust-jack.git" }
dasp = { version = "0.11.0", features = ["all"] }
oscen = "0.1.4"
rand = "0.7.3"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false